--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 import React, { useEffect, useState, useMemo } from "react";
 import MaterialReactTable from "material-react-table";
-import { MenuItem, TextField, Autocomplete, Box, Typography, Dialog, DialogTitle, DialogContent } from "@mui/material";
+import { MenuItem, TextField, Autocomplete, Box, Typography } from "@mui/material";
 import axios from "axios";
 
 // Profile Type & Business Unit Options
@@ -95,7 +95,7 @@ const CSFScopeTable = () => {
     { accessorKey: "relatedSubcategories", header: "Related Subcategories" },
   ], [tableData]);
 
-  // **Layer 2: Business Unit Level (with Owner & Custodian Fields)**
+  // **Layer 2: Business Unit Level**
   const BusinessUnitColumns = useMemo(() => [
     { accessorKey: "businessUnitAbbr", header: "BU", enableEditing: false },
     {
@@ -159,42 +159,20 @@ const CSFScopeTable = () => {
         />
       ),
     },
-    {
-      accessorKey: "auditorProfileType",
-      header: "Profile Type",
-      Edit: ({ cell }) => (
-        <TextField
-          select
-          value={cell.getValue() || ""}
-          onChange={(event) => handleSaveCell(cell.row.original.businessUnitAbbr, cell.column.id, event.target.value)}
-        >
-          {ProfileTypeOptions.map((option) => (
-            <MenuItem key={option} value={option}>
-              {option}
-            </MenuItem>
-          ))}
-        </TextField>
-      ),
-    },
-    {
-      accessorKey: "auditorConsumingFromBusinessUnit",
-      header: "Consuming From BU",
-      Edit: ({ cell }) => (
-        <TextField
-          select
-          value={cell.getValue() || ""}
-          onChange={(event) => handleSaveCell(cell.row.original.businessUnitAbbr, cell.column.id, event.target.value)}
-          disabled={!["Consumer", "Both"].includes(cell.row.original.auditorProfileType)}
-        >
-          {BusinessUnitOptions.map((option) => (
-            <MenuItem key={option} value={option}>
-              {option}
-            </MenuItem>
-          ))}
-        </TextField>
-      ),
-    },
   ], []);
+
+  // **Layer 3: Expandable Info Panel**
+  const renderInfoPanel = () => (
+    <Box p={2} sx={{ backgroundColor: "#f4f4f4", borderRadius: "8px", marginTop: "10px" }}>
+      <Typography variant="h6" gutterBottom>Profile Type Definitions:</Typography>
+      <ul>
+        <li><strong>Provider</strong>: Supplies services to other BUs.</li>
+        <li><strong>Consumer</strong>: Receives services from other BUs.</li>
+        <li><strong>Both</strong>: Acts as both Provider & Consumer.</li>
+        <li><strong>Inheritor</strong>: Inherits control from another BU.</li>
+      </ul>
+    </Box>
+  );
 
   return (
     <MaterialReactTable
@@ -213,6 +191,7 @@ const CSFScopeTable = () => {
           enableExpanding
           enableEditing
           editingMode="modal"
+          renderDetailPanel={renderInfoPanel} // LAYER 3 FIXED
         />
       )}
     />
